[package]
name = "vm-zstd"
version = "0.1.1"
edition = "2021"

[workspace]
members = [
    "program",
]

[dependencies]
bitstream-io = "2.2"
itertools = "0.11"
strum = "0.25"
strum_macros = "0.25"
anyhow = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
zstd-encoder = { package = "encoder-standard", git = "https://github.com/scroll-tech/da-codec.git", optional = true }

[dev-dependencies]
hex = "0.4"
openvm = { git = "https://github.com/openvm-org/openvm.git", default-features = false, features = ["std"] }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", default-features = false}
openvm-transpiler = { git = "https://github.com/openvm-org/openvm.git", default-features = false }
zstd-encoder = { package = "encoder-standard", git = "https://github.com/scroll-tech/da-codec.git" }

[features]
zstd = ["dep:zstd-encoder"]

[[bench]]
harness = false
name = "cycles"
required-features = ["zstd"]
