[package]
name = "zstd-decompressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vm-zstd = { path = "../"}
openvm = { git = "https://github.com/openvm-org/openvm.git", default-features = false, features = ["std"] }
